@@ -1,5 +1,5 @@
 #--
-# Copyright (c) 2011, Sebastian Tello
+# Copyright (c) 2012, Sebastian Tello
 # All rights reserved.
 
 # Redistribution and use in source and binary forms, with or without
